test/typecheck/bad-bulk-memory-no-memory.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-bulk-memory
;;; ERROR: 1

(module
  (func
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
    i32.const 0 i32.const 0 i32.const 0 memory.copy
    i32.const 0 i32.const 0 i32.const 0 memory.fill
  )
)
(;; STDERR ;;;
out/test/typecheck/bad-bulk-memory-no-memory.txt:7:41: error: memory.init requires an imported or defined memory.
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
                                        ^^^^^^^^^^^
out/test/typecheck/bad-bulk-memory-no-memory.txt:7:53: error: data_segment variable out of range: 0 (max 4294967295)
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
                                                    ^
out/test/typecheck/bad-bulk-memory-no-memory.txt:8:41: error: memory.copy requires an imported or defined memory.
    i32.const 0 i32.const 0 i32.const 0 memory.copy
                                        ^^^^^^^^^^^
out/test/typecheck/bad-bulk-memory-no-memory.txt:9:41: error: memory.fill requires an imported or defined memory.
    i32.const 0 i32.const 0 i32.const 0 memory.fill
                                        ^^^^^^^^^^^
;;; STDERR ;;)
